Pievienoju mainīgos no SceneBuilder

--- a/src/main/resources/PlayerSelection.fxml
+++ b/src/main/resources/PlayerSelection.fxml
@@ -46,8 +46,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<Scene xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<Scene xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="model.Player">
    <root>
       <VBox prefHeight="400.0" prefWidth="640.0">
         <children>
@@ -67,7 +66,7 @@
                         <Image url="@images/background.jpg" />
                      </image>
                   </ImageView>
-                  <Button fx:id="gamestart_button" layoutX="232.0" layoutY="197.0" mnemonicParsing="false" opacity="0.75" prefHeight="52.0" prefWidth="142.0" text="Start" textAlignment="CENTER">
+                  <Button fx:id="game_start_button" layoutX="232.0" layoutY="197.0" mnemonicParsing="false" opacity="0.75" prefHeight="52.0" prefWidth="142.0" text="Start" textAlignment="CENTER">
                      <font>
                         <Font name="Arial Black" size="25.0" />
                      </font>
