--- a/src/main/resources/PlayerSelection.fxml
+++ b/src/main/resources/PlayerSelection.fxml
@@ -46,7 +46,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<Scene xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="model.Player">
+<Scene xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.PlayerController">
    <root>
       <VBox prefHeight="400.0" prefWidth="640.0">
         <children>
