--- a/src/main/resources/GameScene.fxml
+++ b/src/main/resources/GameScene.fxml
@@ -13,7 +13,7 @@
       <children>
          <AnchorPane prefHeight="200.0" prefWidth="200.0">
             <children>
-               <GridPane fx:id="mainGrid" prefHeight="750.0" prefWidth="750.0">
+               <GridPane fx:id="mainGrid" onMouseClicked="#paneClicked" prefHeight="750.0" prefWidth="750.0">
                  <columnConstraints>
                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
