--- a/src/main/resources/GameScene.fxml
+++ b/src/main/resources/GameScene.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.Scene?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -10,11 +11,11 @@
 <?import javafx.scene.layout.VBox?>
 
 <Scene xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.GameController">
-    <AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="750.0" prefWidth="1050.0">
+    <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="750.0" prefWidth="1000.0">
       <children>
          <AnchorPane prefHeight="200.0" prefWidth="200.0">
             <children>
-               <GridPane fx:id="mainGrid" prefHeight="750.0" prefWidth="750.0">
+               <GridPane fx:id="mainGrid" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="750.0" prefWidth="750.0">
                  <columnConstraints>
                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -38,15 +39,15 @@
                </GridPane>
             </children>
          </AnchorPane>
-         <VBox fx:id="vboxWhite" layoutX="750.0" layoutY="375.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="375.0" prefWidth="300.0">
+         <VBox fx:id="vboxWhite" layoutX="750.0" layoutY="375.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="375.0" prefWidth="250.0">
             <children>
-               <HBox prefHeight="225.0" prefWidth="200.0">
+               <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="225.0" prefWidth="250.0">
                   <children>
                      <Label fx:id="whitePlayerLabel" text="Label" />
                      <Label fx:id="timerWhiteLabel" text="Label" />
                   </children>
                </HBox>
-               <GridPane fx:id="whitePiecesOut" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="150.0" prefWidth="300.0">
+               <GridPane fx:id="whitePiecesOut" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="150.0" prefWidth="250.0">
                  <columnConstraints>
                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -63,15 +64,15 @@
                </GridPane>
             </children>
          </VBox>
-         <VBox fx:id="vboxBlack" layoutX="750.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="375.0" prefWidth="300.0">
+         <VBox fx:id="vboxBlack" layoutX="750.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="375.0" prefWidth="250.0">
             <children>
-               <HBox prefHeight="225.0" prefWidth="300.0">
+               <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="225.0" prefWidth="250.0">
                   <children>
                      <Label fx:id="blackPlayerLabel" text="Label" />
                      <Label fx:id="timerBlackLabel" text="Label" />
                   </children>
                </HBox>
-               <GridPane fx:id="blackPiecesOut" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="150.0" prefWidth="300.0">
+               <GridPane fx:id="blackPiecesOut" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="150.0" prefWidth="250.0">
                  <columnConstraints>
                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -87,5 +88,8 @@
                </GridPane>
             </children>
          </VBox>
-      </children></AnchorPane>
+      </children>
+      <opaqueInsets>
+         <Insets />
+      </opaqueInsets></AnchorPane>
 </Scene>
