--- a/src/main/resources/resultScene.fxml
+++ b/src/main/resources/resultScene.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-
 <?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -8,7 +7,6 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
-
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.SceneController">
    <children>
@@ -18,7 +16,7 @@
             <Image url="@images/chess.jpg" />
          </image>
       </ImageView>
-      <Label fx:id="labelYouTried" layoutX="58.0" layoutY="30.0" prefHeight="90.0" prefWidth="301.0" text="You tried!" textFill="#fffbfb">
+      <Label fx:id="labelYouTried" layoutX="93.0" layoutY="29.0" prefHeight="90.0" prefWidth="301.0" text="Result!" textFill="#fffbfb">
          <font>
             <Font size="62.0" />
          </font>
@@ -33,12 +31,12 @@
             <Font size="24.0" />
          </font>
       </Label>
-      <Button fx:id="buttonPlayAgain" onAction="#playAgainClick" layoutX="302.0" layoutY="323.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="85.0" text="Play again">
+      <Button fx:id="buttonPlayAgain" layoutX="291.0" layoutY="323.0" mnemonicParsing="false" onAction="#playAgainClick" prefHeight="35.0" prefWidth="108.0" text="Play again">
          <font>
             <Font size="14.0" />
          </font>
       </Button>
-      <Button fx:id="buttonExit" onAction="#exitButtonClick" layoutX="459.0" layoutY="323.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="85.0" text="Exit">
+      <Button fx:id="buttonExit" layoutX="447.0" layoutY="323.0" mnemonicParsing="false" onAction="#exitButtonClick" prefHeight="35.0" prefWidth="108.0" text="Exit">
          <font>
             <Font size="14.0" />
          </font>
