--- a/src/main/resources/GameScene.fxml
+++ b/src/main/resources/GameScene.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.Scene?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Slider?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -74,6 +75,8 @@
                      <Label text="Label" visible="false" />
                      <Label />
                      <Label fx:id="timerBlackLabel" text="Label" />
+                     <Label fx:id="volumeSliderName" text="   Volume   " />
+                     <Slider fx:id="volumeSlider" prefHeight="14.0" prefWidth="75.0" min="0.0" max="1.0" value="1.0"/>
                   </children>
                </HBox>
                <GridPane fx:id="blackPiecesOut" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="150.0" prefWidth="250.0">
