--- a/src/main/resources/MainMenu.fxml
+++ b/src/main/resources/MainMenu.fxml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Slider?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="750.0" prefWidth="1050.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainMenuController">
    <children>
@@ -14,5 +17,11 @@
       </ImageView>
       <Button id="shiny" fx:id="startGame" layoutX="866.0" layoutY="545.0" mnemonicParsing="false" onAction="#startGameClicked" styleClass="root" stylesheets="@style.css" text="Start Game" />
       <Button id="shiny" fx:id="tutorial" layoutX="877.0" layoutY="602.0" mnemonicParsing="false" onAction="#tutorialClicked" styleClass="root" stylesheets="@style.css" text="Tutorial" />
+      <Slider fx:id="volumeSlider" layoutX="50.0" layoutY="700.0" max="1.0" min="0.0" value="1.0" />
+      <Label layoutX="94.0" layoutY="659.0" prefHeight="28.0" prefWidth="52.0" text="Volume" textFill="#6e6f50">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
