--- a/src/main/resources/GameScene.fxml
+++ b/src/main/resources/GameScene.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.VBox?>
 
 <Scene xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.GameController">
-    <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="750.0" prefWidth="1000.0">
+    <AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="750.0" prefWidth="1000.0">
       <children>
          <AnchorPane prefHeight="200.0" prefWidth="200.0">
             <children>
@@ -76,7 +76,7 @@
                      <Label />
                      <Label fx:id="timerBlackLabel" text="Label" />
                      <Label fx:id="volumeSliderName" text="   Volume   " />
-                     <Slider fx:id="volumeSlider" prefHeight="14.0" prefWidth="75.0" min="0.0" max="1.0" value="1.0"/>
+                     <Slider fx:id="volumeSlider" max="1.0" min="0.0" prefHeight="14.0" prefWidth="75.0" value="1.0" />
                   </children>
                </HBox>
                <GridPane fx:id="blackPiecesOut" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="150.0" prefWidth="250.0">
