--- a/src/main/resources/style.css
+++ b/src/main/resources/style.css
@@ -29,3 +29,37 @@ shiny:hover {
     -fx-padding: 10 20 10 20;
 }
 
+#buttonPlayAgain{
+	 -fx-text-fill: white;
+    -fx-font-family: "Arial Narrow";
+    -fx-font-weight: bold;
+    -fx-background-color: linear-gradient(#585858, #2E2E2E);
+    -fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.6) , 5, 0.0 , 0 , 1 );
+}
+
+#buttonPlayAgain:hover {
+    -fx-background-color: linear-gradient(#2E2E2E, #585858);
+}
+#buttonPlayAgain:pressed
+{
+     -fx-padding: 10 15 13 15;
+     -fx-background-insets: 2 0 0 0,2 0 3 0,2 0 4 0,2 0 5 0;
+
+}
+
+#buttonExit{
+	 -fx-text-fill: white;
+    -fx-font-family: "Arial Narrow";
+    -fx-font-weight: bold;
+    -fx-background-color: linear-gradient(#B43104, #610B0B);
+    -fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.6) , 5, 0.0 , 0 , 1 );
+}
+
+#buttonExit:hover {
+    -fx-background-color: linear-gradient(#610B0B, #B43104);
+}
+#buttonExit:pressed
+{
+     -fx-padding: 10 15 13 15;
+     -fx-background-insets: 2 0 0 0,2 0 3 0,2 0 4 0,2 0 5 0;
+}
