--- a/src/main/resources/resultScene.fxml
+++ b/src/main/resources/resultScene.fxml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-
 <?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
-
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.SceneController">
    <children>
@@ -18,27 +17,29 @@
             <Image url="@images/chess.jpg" />
          </image>
       </ImageView>
-      <Label fx:id="labelYouTried" layoutX="58.0" layoutY="30.0" prefHeight="90.0" prefWidth="301.0" text="You tried!" textFill="#fffbfb">
+      <Rectangle fx:id="winnerSquare" arcHeight="5.0" arcWidth="5.0" fill="#697d643c" height="236.0" layoutX="279.0" layoutY="144.0" stroke="BLACK" strokeType="INSIDE" width="130.0" />
+      <Rectangle fx:id="winnerSquare1" arcHeight="5.0" arcWidth="5.0" fill="#7d656542" height="236.0" layoutX="436.0" layoutY="144.0" stroke="BLACK" strokeType="INSIDE" width="130.0" />
+      <Label fx:id="labelYouTried" layoutX="49.0" layoutY="29.0" prefHeight="90.0" prefWidth="534.0" text="Who is the winner?" textFill="#fffbfb">
          <font>
-            <Font size="62.0" />
+            <Font name="Candara Light" size="46.0" />
          </font>
       </Label>
       <Label fx:id="labelWinner" layoutX="307.0" layoutY="157.0" text="Winner" textFill="#45f71d">
          <font>
-            <Font name="System Bold" size="24.0" />
+            <Font name="Candara Light" size="24.0" />
          </font>
       </Label>
       <Label fx:id="labelLoser" layoutX="474.0" layoutY="157.0" text="Loser" textFill="#ff1c1c">
          <font>
-            <Font name="System Bold" size="24.0" />
+            <Font name="Candara Light" size="24.0" />
          </font>
       </Label>
-      <Button fx:id="buttonPlayAgain" onAction="#playAgainClick" layoutX="302.0" layoutY="323.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="85.0" text="Play again">
+      <Button fx:id="buttonPlayAgain" layoutX="302.0" layoutY="323.0" mnemonicParsing="false" onAction="#playAgainClick" prefHeight="35.0" prefWidth="85.0" text="Play again">
          <font>
             <Font size="14.0" />
          </font>
       </Button>
-      <Button fx:id="buttonExit" onAction="#exitButtonClick" layoutX="459.0" layoutY="323.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="85.0" text="Exit">
+      <Button fx:id="buttonExit" layoutX="459.0" layoutY="323.0" mnemonicParsing="false" onAction="#exitButtonClick" prefHeight="35.0" prefWidth="85.0" text="Exit">
          <font>
             <Font size="14.0" />
          </font>
