--- a/src/main/resources/resultScene.fxml
+++ b/src/main/resources/resultScene.fxml
@@ -9,79 +9,79 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.SceneController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="750.0" prefWidth="1050.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.SceneController">
    <children>
       <Accordion fx:id="stage" layoutX="93.0" layoutY="93.0" />
-      <ImageView fx:id="background" fitHeight="417.0" fitWidth="628.0" layoutX="-13.0" layoutY="-8.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="background" fitHeight="771.0" fitWidth="1272.0" layoutX="-180.0" layoutY="-15.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@images/chess.jpg" />
+            <Image url="@../../../../../../../Downloads/resultSceneImage.jpg" />
          </image>
       </ImageView>
-      <Rectangle fx:id="winnerSquare" arcHeight="5.0" arcWidth="5.0" fill="#697d643c" height="236.0" layoutX="279.0" layoutY="144.0" stroke="BLACK" strokeType="INSIDE" width="130.0" />
-      <Rectangle fx:id="winnerSquare1" arcHeight="5.0" arcWidth="5.0" fill="#7d656542" height="236.0" layoutX="436.0" layoutY="144.0" stroke="BLACK" strokeType="INSIDE" width="130.0" />
-      <Label fx:id="labelYouTried" layoutX="49.0" layoutY="29.0" prefHeight="90.0" prefWidth="534.0" text="Who is the winner?" textFill="#fffbfb">
+      <Rectangle fx:id="winnerSquare" arcHeight="5.0" arcWidth="5.0" fill="#697d643c" height="396.0" layoutX="505.0" layoutY="255.0" stroke="BLACK" strokeType="INSIDE" width="209.0" />
+      <Rectangle fx:id="winnerSquare1" arcHeight="5.0" arcWidth="5.0" fill="#7d656542" height="396.0" layoutX="746.0" layoutY="253.0" stroke="BLACK" strokeType="INSIDE" width="209.0" />
+      <Label fx:id="labelYouTried" layoutX="73.0" layoutY="80.0" prefHeight="95.0" prefWidth="665.0" text="Who is the winner?" textFill="#fffbfb">
          <font>
-            <Font name="Candara Light" size="46.0" />
+            <Font name="Candara Light" size="79.0" />
          </font>
       </Label>
-      <Label fx:id="labelWinner" layoutX="307.0" layoutY="157.0" text="Winner" textFill="#45f71d">
+      <Label fx:id="labelWinner" layoutX="557.0" layoutY="278.0" text="Winner" textFill="#45f71d">
          <font>
-            <Font name="Candara Light" size="24.0" />
+            <Font name="Candara Light" size="40.0" />
          </font>
       </Label>
-      <Label fx:id="labelLoser" layoutX="474.0" layoutY="157.0" text="Loser" textFill="#ff1c1c">
+      <Label fx:id="labelLoser" layoutX="800.0" layoutY="267.0" prefHeight="68.0" prefWidth="98.0" text="Loser" textFill="#ff1c1c">
          <font>
-            <Font name="Candara Light" size="24.0" />
+            <Font name="Candara Light" size="40.0" />
          </font>
       </Label>
-      <Button fx:id="buttonPlayAgain" layoutX="302.0" layoutY="323.0" mnemonicParsing="false" onAction="#playAgainClick" prefHeight="35.0" prefWidth="85.0" text="Play again">
+      <Button fx:id="buttonPlayAgain" layoutX="537.0" layoutY="543.0" mnemonicParsing="false" onAction="#playAgainClick" prefHeight="58.0" prefWidth="157.0" text="Play again">
          <font>
-            <Font size="14.0" />
+            <Font size="23.0" />
          </font>
       </Button>
-      <Button fx:id="buttonExit" layoutX="459.0" layoutY="323.0" mnemonicParsing="false" onAction="#exitButtonClick" prefHeight="35.0" prefWidth="85.0" text="Exit">
+      <Button fx:id="buttonExit" layoutX="772.0" layoutY="541.0" mnemonicParsing="false" onAction="#exitButtonClick" prefHeight="62.0" prefWidth="157.0" text="Exit">
          <font>
-            <Font size="14.0" />
+            <Font size="23.0" />
          </font>
       </Button>
-      <Label fx:id="labelWinnerName" contentDisplay="CENTER" layoutX="316.0" layoutY="201.0" prefHeight="27.0" prefWidth="57.0" text="Label" textFill="WHITE">
+      <Label fx:id="labelWinnerName" contentDisplay="CENTER" layoutX="570.0" layoutY="357.0" prefHeight="27.0" prefWidth="57.0" text="Label" textFill="WHITE">
          <font>
-            <Font name="System Bold" size="18.0" />
+            <Font name="System Bold" size="23.0" />
          </font>
       </Label>
-      <Label fx:id="labelLoserName" contentDisplay="CENTER" layoutX="474.0" layoutY="201.0" prefHeight="27.0" prefWidth="54.0" text="Label" textFill="WHITE">
+      <Label fx:id="labelLoserName" contentDisplay="CENTER" layoutX="815.0" layoutY="357.0" prefHeight="34.0" prefWidth="58.0" text="Label" textFill="WHITE">
          <font>
-            <Font name="System Bold" size="18.0" />
+            <Font name="System Bold" size="23.0" />
          </font>
       </Label>
-      <Label fx:id="ltextPoints" layoutX="302.0" layoutY="235.0" text="Points:" textFill="#c9c9c9">
+      <Label fx:id="ltextPoints" layoutX="542.0" layoutY="433.0" text="Points:" textFill="#c9c9c9">
          <font>
-            <Font size="18.0" />
+            <Font size="24.0" />
          </font>
       </Label>
-      <Label fx:id="ltextPoints2" layoutX="456.0" layoutY="235.0" text="Points:" textFill="#c9c9c9">
+      <Label fx:id="ltextPoints2" layoutX="782.0" layoutY="435.0" text="Points:" textFill="#c9c9c9">
          <font>
-            <Font size="18.0" />
+            <Font size="24.0" />
          </font>
       </Label>
-      <Label fx:id="winnerPoints" layoutX="359.0" layoutY="235.0" text="123" textFill="#c9c9c9">
+      <Label fx:id="winnerPoints" layoutX="613.0" layoutY="433.0" text="123" textFill="#c9c9c9">
          <font>
-            <Font size="18.0" />
+            <Font size="24.0" />
          </font>
       </Label>
-      <Label fx:id="loserPoints" layoutX="516" layoutY="235.0" text="123" textFill="#c9c9c9">
+      <Label fx:id="loserPoints" layoutX="860.0" layoutY="435.0" text="123" textFill="#c9c9c9">
          <font>
-            <Font size="18.0" />
+            <Font size="24.0" />
          </font>
       </Label>
-      <Label fx:id="textTime" layoutX="130.0" layoutY="120.0" prefHeight="27.0" prefWidth="54.0" text="Time:" textFill="#d4d4d4">
+      <Label fx:id="textTime" layoutX="267.0" layoutY="185.0" prefHeight="50.0" prefWidth="117.0" text="Time:" textFill="#d4d4d4">
          <font>
-            <Font size="18.0" />
+            <Font size="34.0" />
          </font>
       </Label>
-      <Label fx:id="textTime1" layoutX="184.0" layoutY="120.0" prefHeight="27.0" prefWidth="54.0" text="00:00" textFill="#d4d4d4">
+      <Label fx:id="textTime1" layoutX="368.0" layoutY="186.0" prefHeight="35.0" prefWidth="89.0" text="00:00" textFill="#d4d4d4">
          <font>
-            <Font size="18.0" />
+            <Font size="34.0" />
          </font>
       </Label>
    </children>
