--- a/src/main/resources/GameScene.fxml
+++ b/src/main/resources/GameScene.fxml
@@ -4,12 +4,18 @@
 <?import javafx.scene.Scene?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Slider?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.paint.Color?>
+<?import javafx.scene.paint.LinearGradient?>
+<?import javafx.scene.paint.Stop?>
+<?import javafx.scene.text.Font?>
 
 <Scene xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.GameController">
     <AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="750.0" prefWidth="1000.0">
@@ -44,10 +50,59 @@
             <children>
                <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="225.0" prefWidth="250.0">
                   <children>
-                     <Label fx:id="whitePlayerLabel" text="Label" />
+                     <AnchorPane prefHeight="225.0" prefWidth="270.0">
+                        <children>
+                           <ImageView fitHeight="226.0" fitWidth="250.0" layoutY="1.0">
+                              <image>
+                                 <Image url="@images/gameSceneBackground.jpg" />
+                              </image>
+                           </ImageView>
+                           <Label fx:id="whitePlayerLabel" layoutX="85.0" layoutY="68.0" prefHeight="27.0" prefWidth="102.0" text="Label">
+                              <font>
+                                 <Font name="Arial Black" size="18.0" />
+                              </font>
+                              <textFill>
+                                 <LinearGradient startX="1.0">
+                                    <stops>
+                                       <Stop>
+                                          <color>
+                                             <Color />
+                                          </color>
+                                       </Stop>
+                                       <Stop offset="1.0">
+                                          <color>
+                                             <Color red="1.0" green="1.0" blue="1.0" />
+                                          </color>
+                                       </Stop>
+                                    </stops>
+                                 </LinearGradient>
+                              </textFill>
+                           </Label>
+                           <Label fx:id="timerWhiteLabel" layoutX="93.0" layoutY="135.0" text="Label">
+                              <font>
+                                 <Font name="Arial Black" size="14.0" />
+                              </font>
+                              <textFill>
+                                 <LinearGradient startX="1.0">
+                                    <stops>
+                                       <Stop>
+                                          <color>
+                                             <Color />
+                                          </color>
+                                       </Stop>
+                                       <Stop offset="1.0">
+                                          <color>
+                                             <Color red="1.0" green="1.0" blue="1.0" />
+                                          </color>
+                                       </Stop>
+                                    </stops>
+                                 </LinearGradient>
+                              </textFill>
+                           </Label>
+                        </children>
+                     </AnchorPane>
                      <Label text="Label" visible="false" />
                      <Label />
-                     <Label fx:id="timerWhiteLabel" text="Label" />
                   </children>
                </HBox>
                <GridPane fx:id="whitePiecesOut" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="150.0" prefWidth="250.0">
@@ -67,19 +122,84 @@
                </GridPane>
             </children>
          </VBox>
-         <VBox fx:id="vboxBlack" layoutX="750.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="375.0" prefWidth="250.0">
+         <VBox fx:id="vboxBlack" layoutX="750.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="376.0" prefWidth="250.0">
             <children>
                <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="225.0" prefWidth="250.0">
                   <children>
-                     <Label fx:id="blackPlayerLabel" text="Label" />
                      <Label text="Label" visible="false" />
                      <Label />
-                     <Label fx:id="timerBlackLabel" text="Label" />
-                     <Label fx:id="volumeSliderName" text="   Volume   " />
-                     <Slider fx:id="volumeSlider" max="1.0" min="0.0" prefHeight="14.0" prefWidth="75.0" value="1.0" />
+                     <AnchorPane prefHeight="225.0" prefWidth="329.0">
+                        <children>
+                           <ImageView fitHeight="225.0" fitWidth="255.0" layoutX="-13.0">
+                              <image>
+                                 <Image url="@images/gameSceneBackground.jpg" />
+                              </image>
+                           </ImageView>
+                           <Label fx:id="timerBlackLabel" layoutX="93.0" layoutY="119.0" text="Label">
+                              <font>
+                                 <Font name="Arial Black" size="14.0" />
+                              </font>
+                              <textFill>
+                                 <LinearGradient endX="1.0" endY="1.0" startX="1.0">
+                                    <stops>
+                                       <Stop>
+                                          <color>
+                                             <Color />
+                                          </color>
+                                       </Stop>
+                                       <Stop offset="1.0">
+                                          <color>
+                                             <Color red="1.0" green="1.0" blue="1.0" />
+                                          </color>
+                                       </Stop>
+                                    </stops>
+                                 </LinearGradient>
+                              </textFill>
+                           </Label>
+                           <Label fx:id="blackPlayerLabel" layoutX="79.0" layoutY="54.0" prefHeight="27.0" prefWidth="114.0" text="Label">
+                              <font>
+                                 <Font name="Arial Black" size="18.0" />
+                              </font>
+                              <textFill>
+                                 <LinearGradient endX="1.0" endY="1.0" startX="1.0">
+                                    <stops>
+                                       <Stop>
+                                          <color>
+                                             <Color red="0.03947368264198303" green="0.02357456088066101" blue="0.02357456088066101" />
+                                          </color>
+                                       </Stop>
+                                       <Stop offset="1.0">
+                                          <color>
+                                             <Color red="1.0" green="1.0" blue="1.0" />
+                                          </color>
+                                       </Stop>
+                                    </stops>
+                                 </LinearGradient>
+                              </textFill>
+                           </Label>
+                           <Label fx:id="volumeSliderName" layoutX="46.0" layoutY="187.0" text="   Volume   ">
+                              <textFill>
+                                 <LinearGradient endX="1.0" endY="1.0" startX="1.0">
+                                    <stops>
+                                       <Stop>
+                                          <color>
+                                             <Color />
+                                          </color>
+                                       </Stop>
+                                       <Stop offset="1.0">
+                                          <color>
+                                             <Color red="1.0" green="1.0" blue="1.0" />
+                                          </color>
+                                       </Stop>
+                                    </stops>
+                                 </LinearGradient>
+                              </textFill></Label>
+                           <Slider fx:id="volumeSlider" layoutX="121.0" layoutY="188.0" max="1.0" min="0.0" prefHeight="14.0" prefWidth="75.0" value="1.0" />
+                        </children>
+                     </AnchorPane>
                   </children>
                </HBox>
-               <GridPane fx:id="blackPiecesOut" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="150.0" prefWidth="250.0">
+               <GridPane fx:id="blackPiecesOut" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="151.0" prefWidth="250.0">
                  <columnConstraints>
                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
