--- a/src/main/resources/ResultScene.fxml
+++ b/src/main/resources/ResultScene.fxml
@@ -19,49 +19,49 @@
       </ImageView>
       <Rectangle fx:id="winnerSquare" arcHeight="5.0" arcWidth="5.0" fill="#697d643c" height="396.0" layoutX="505.0" layoutY="255.0" stroke="BLACK" strokeType="INSIDE" width="209.0" />
       <Rectangle fx:id="winnerSquare1" arcHeight="5.0" arcWidth="5.0" fill="#7d656542" height="396.0" layoutX="746.0" layoutY="253.0" stroke="BLACK" strokeType="INSIDE" width="209.0" />
-      <Label fx:id="labelYouTried" layoutX="73.0" layoutY="80.0" prefHeight="95.0" prefWidth="665.0" text="Who is the winner?" textFill="#fffbfb">
+      <Label fx:id="labelYouTried" layoutX="73.0" layoutY="80.0" prefHeight="117.0" prefWidth="828.0" text="Who is the winner?" textFill="#fffbfb">
          <font>
-            <Font name="Candara Light" size="79.0" />
+            <Font name="Arial Black" size="79.0" />
          </font>
       </Label>
-      <Label fx:id="labelWinner" layoutX="557.0" layoutY="278.0" text="Winner" textFill="#45f71d">
+      <Label fx:id="labelWinner" layoutX="542.0" layoutY="277.0" text="Winner" textFill="#45f71d">
          <font>
-            <Font name="Candara Light" size="40.0" />
+            <Font name="Arial Black" size="39.0" />
          </font>
       </Label>
-      <Label fx:id="labelLoser" layoutX="800.0" layoutY="267.0" prefHeight="68.0" prefWidth="98.0" text="Loser" textFill="#ff1c1c">
+      <Label fx:id="labelLoser" layoutX="784.0" layoutY="272.0" prefHeight="68.0" prefWidth="133.0" text="Loser" textFill="#ff1c1c">
          <font>
-            <Font name="Candara Light" size="40.0" />
+            <Font name="Arial Black" size="39.0" />
          </font>
       </Label>
       <Button fx:id="buttonPlayAgain" layoutX="537.0" layoutY="543.0" mnemonicParsing="false" onAction="#playAgainClick" prefHeight="58.0" prefWidth="157.0" text="Play again">
          <font>
-            <Font size="23.0" />
+            <Font name="Arial Black" size="22.0" />
          </font>
       </Button>
       <Button fx:id="buttonExit" layoutX="772.0" layoutY="541.0" mnemonicParsing="false" onAction="#exitButtonClick" prefHeight="62.0" prefWidth="157.0" text="Exit">
          <font>
-            <Font size="23.0" />
+            <Font name="Arial Black" size="22.0" />
          </font>
       </Button>
-      <Label fx:id="labelWinnerName" contentDisplay="CENTER" layoutX="570.0" layoutY="357.0" prefHeight="27.0" prefWidth="57.0" text="Label" textFill="WHITE">
+      <Label fx:id="labelWinnerName" contentDisplay="CENTER" layoutX="570.0" layoutY="357.0" prefHeight="34.0" prefWidth="75.0" text="Label" textFill="WHITE">
          <font>
-            <Font name="System Bold" size="23.0" />
+            <Font name="Arial Black" size="22.0" />
          </font>
       </Label>
-      <Label fx:id="labelLoserName" contentDisplay="CENTER" layoutX="815.0" layoutY="357.0" prefHeight="34.0" prefWidth="58.0" text="Label" textFill="WHITE">
+      <Label fx:id="labelLoserName" contentDisplay="CENTER" layoutX="816.0" layoutY="358.0" prefHeight="34.0" prefWidth="69.0" text="Label" textFill="WHITE">
          <font>
-            <Font name="System Bold" size="23.0" />
+            <Font name="Arial Black" size="22.0" />
          </font>
       </Label>
       <Label fx:id="textTime" layoutX="267.0" layoutY="185.0" prefHeight="50.0" prefWidth="117.0" text="Time:" textFill="#d4d4d4">
          <font>
-            <Font size="34.0" />
+            <Font name="Arial Black" size="35.0" />
          </font>
       </Label>
-      <Label fx:id="textTime1" layoutX="368.0" layoutY="186.0" prefHeight="35.0" prefWidth="89.0" text="00:00" textFill="#d4d4d4">
+      <Label fx:id="textTime1" layoutX="398.0" layoutY="185.0" prefHeight="53.0" prefWidth="117.0" text="00:00" textFill="#d4d4d4">
          <font>
-            <Font size="34.0" />
+            <Font name="Arial Black" size="35.0" />
          </font>
       </Label>
    </children>
